<resources>

    <!-- ... -->
    <string name="facebook_application_id" translatable="false">361051057677129</string>
    <!-- Facebook Application ID, prefixed by 'fb'.  Enables Chrome Custom tabs. -->
    <string name="facebook_login_protocol_scheme" translatable="false">fb361051057677129</string>
    <!-- Dialog Names -->
    <string name="dialog_select_photo">SelectPhoto</string>


    <string name="userDb">Users</string>

    <string name="app_dwnload_url">https://play.google.com/store/apps/details?id=com.getaplot.asgetaplot</string>

    <string name="app_name">GetAplot Test</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="change_status">Change Status</string>
    <string name="status">Status</string>
    <string name="update_status">update Status</string>
    <string name="appfaqurl">https://www.getaplot.com</string>
    <string name="apptosurl">https://www.getaplot.com</string>
    <!--api key maps-->

    <string name="google_maps_key">AIzaSyAJIUnlnk3d1zzMXLkmOEA5uiFHM74tIUM</string>

    <!--new for preferences-->

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">GetAplot is an application that lets you know which events are happening where and when so you can plot,meet people and have fun.</string>
    <string name="summary_support">Got any queries? We are here to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">@string/appfaqurl</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_terms">@string/apptosurl</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="add_comment">Add Comment...</string>
    <string name="this_is_the_best_place_you_could_ever_come_to">This is the best place you could ever come to</string>
    <string name="current_user_status">Current User Status</string>
    <string name="display_name">Display Name</string>
    <string name="sfr">SEND FRIEND REQUEST</string>
    <string name="current_city">Current Location</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="channel_name">myplotchannel</string>
    <string name="channel_description">This references channel of the notifications</string>
    <string name="message">Message</string>
    <string name="str_mbarara">Mbarara</string>
    <string name="current_c">current_city</string>
    <string name="rou">Rest Of Uganda</string>
    <string name="no_posts_here_yet_feed_from_places_will_appear_here">No Posts Here yet,Feed from places will appear here</string>
    <string name="appstoreurl">https://play.google.com/store/apps/details?id=com.getaplot.asgetaplot</string>

    <!-- Dialog Names -->
    <string name="dialog_add_to_story">AddToStoryDialog</string>

    <!-- Easy Video Player Stuff -->
    <string name="evp_submit">SUBMIT</string>
    <string name="evp_retry">RETRY</string>

    <!-- Spring Header Stuff -->
    <string name="spring_header_behavior">tabian.com.instagramclonetest.springheader.SpringHeaderBehavior</string>
    <string name="dependent_view_behavior">tabian.com.instagramclonetest.DependentViewBehavior</string>

    <string name="simple_refresh_header_text_below_threshold">below fold</string>
    <string name="simple_refresh_header_text_above_threshold">above folder</string>
    <string name="simple_refresh_header_text_refreshing">refreshing...</string>

    <!-- JSON values -->
    <string name="bitmap">bitmap</string>

    <!-- Error Messages -->
    <string name="image_load_error">image_load_error</string>

    <!-- JSON keys -->
    <string name="media_type">media_type</string>
    <string name="duration">duration</string>
    <string name="encoded_bitmap">encoded_bitmap</string>
    <string name="width_scale_factor">width_scale_factor</string>
    <string name="height_scale_factor">height_scale_factor</string>
    <string name="video_uri">video_uri</string>
    <string name="surface_number">surface_number</string>
    <string name="rotations">rotations</string>
    <string name="resource_index">resource_index</string>
    <string name="media_index">media_index</string>
    <string name="media_source">media_source</string>

    <!-- Material Camera Stuff -->
    <string name="mcam_defaultDuration">00:00</string>
    <string name="mcam_permissions_needed">Permissions Needed</string>
    <string name="mcam_video_perm_warning">Permission to access your microphone and camera is needed, the camera will now close.</string>
    <string name="mcam_retry">RETRY</string>
    <string name="mcam_use_video">USE VIDEO</string>
    <string name="mcam_use_stillshot">USE STILLSHOT</string>
    <string name="mcam_portrait">Portrait</string>
    <string name="mcam_portrait_warning">It\'s recommended that you record in landscape. Record in portrait?</string>
    <string name="mcam_yes">Yes</string>
    <string name="mcam_error">Error</string>
    <string name="mcam_video_capture_unsupported">Your device does not support video capture.</string>
    <string name="mcam_no_audio_access">You haven\'t given access to your microphone; no audio will be recorded.</string>
    <string name="mcam_file_size_limit_reached">You\'ve reached the maximum file size!</string>
    <string name="mcam_image_preview_error_title">Image preview error</string>
    <string name="mcam_image_preview_error_message">Could not decode bitmap</string>
    <string name="delete_conversation">Delete Conversation</string>
    <string name="title_activity_settings">Appliation Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
